crates/mpl-hir/tests/snapshots/diagnostics__rejects_unknown_pipe_keyword_like_mplc.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(\"dataset:metric | fflter tag == \\\"value\\\"\",)"
---
INPUT:

dataset:metric | fflter tag == "value"

DIAGNOSTICS:

1. Error: MPL syntax error: unexpected token or operation

REPORTS:

REPORT 1:

  × MPL syntax error: unexpected token or operation
   ╭────
 1 │ dataset:metric | fflter tag == "value"
   ·                  ───┬──
   ·                     ╰── MPL syntax error: unexpected token or operation
   ╰────
